Signed-off-by: getian124 <3044327581@qq.com> 修改

--- a/Public/Home/cartoon/book/list.html
+++ b/Public/Home/cartoon/book/list.html
@@ -160,7 +160,7 @@
 <?php include '../common/footer.html'?>
 </body>
 <script src="../common/js/jquery-1.8.3.min.js"></script>
-<script src="../common/js/foundation-datepicker.min.js"></script>
-<!--<script src="../common/js/foundation-datepicker.zh-CN.js"></script>-->
+<script src="../common/js/foundation-datepicker.js"></script>
+<script src="../common/js/foundation-datepicker.zh-CN.js"></script>
 <script src="../book/js/list.js"></script>
 </html>
