Signed-off-by: getian124 <3044327581@qq.com> 10/13 提交阅读页面 补充

--- a/Public/Home/simple_cartoon/opus.html
+++ b/Public/Home/simple_cartoon/opus.html
@@ -57,8 +57,10 @@
             </div>
             <div  id="main_one_right_six">
                 <div>
-                   <span class="iconfont">&#xe609;</span>
-                    开始阅读
+                   <a href="reader.html">
+                        <span class="iconfont">&#xe609;</span>
+                        开始阅读
+                    </a>
                 </div>
                <!--  <div>
                     <span class="iconfont">&#xe602;</span>
